# monorepo-typescript-rust

./: .eslintignore  .gitignore  .huskyrc  .yarnrc.yml  Cargo.toml  README.md  dprint.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.cargo/: config.toml
.husky/: commit-msg  pre-commit
.yarn/plugins/@ojkelly/: plugin-all.cjs
.yarn/plugins/@yarnpkg/: plugin-typescript.cjs  plugin-workspace-tools.cjs
apps/athena/: .eslintignore  .eslintrc.js  package.json  tsconfig.json
apps/athena/src/: App.tsx
apps/gaia/: .eslintrc.js  .swcrc  Cargo.toml  README.md  package.json  tsconfig.json
apps/gaia/configuration/: base.yaml
apps/gaia/scripts/: init_db.sh
apps/gaia/src/: configuration.rs  index.ts  main.rs  startup.rs
apps/gaia/src/routes/: health_check.rs
apps/hera/: .eslintrc.js  next.config.js  package.json
apps/hera/pages/: index.tsx
apps/hera/src/pages/: _app.tsx  index.tsx
libs/logger/: package.json  tsconfig.json
libs/logger/src/: index.ts  info.ts
libs/ui/: package.json
libs/ui/src/: button.tsx  main.tsx
